fixed element shift when ajax call completes

--- a/src/Styles/framework-data.css
+++ b/src/Styles/framework-data.css
@@ -1,5 +1,6 @@
 .framework-container {
   margin-top: 10%;
+  overflow: overlay;
 }
 
 .framework-list {
